--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Stock App Trial</title>
 </head>
 <body>
-    <h1>Hello World from My Stock App</h1>
+    <h1>Hello Southern Coil from My Stock App</h1>
     <p>This is my very first live page on Vercel!</p>
 </body>
 </html>
